--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ Address: City University of Hong Kong, 83 Tat Chee Avenue, Kowloon Tong, Kowloon
 Email: pehuang [@] cityu [DOT] edu [DOT] hk</p>
 </td></tr></table>
 <h2>Short Biography</h2>
-<p>I received my B.Sc. and Ph.D. degrees in the School of Computer Science and Technology from the University of Science and Technology of China (USTC) in 2014 and 2020, respectively, under the supervision of <a href="https://www.cs.bham.ac.uk/~xin/">Prof. Xin Yao</a> from University of Birminghan and <a href="http://faculty.sustech.edu.cn/tangk3/en/">Prof. Ke Tang</a> from USTC.</p>
-<p>I joined the <a href="https://cse.sustech.edu.cn/">Department of Computer Science and Engineering (CSE)</a>, <a href="https://sustech.edu.cn/">Southern University of Science and Technology (SUSTech)</a> in September 2020, as a Research Assistant Professor.
-I am also a member of the Nature Inspired Computation and Applications Laboratory (<a href="http://www.nical.ai/">NICAL</a>) led by <a href="https://www.cs.bham.ac.uk/~xin/">Prof. Xin Yao</a> and <a href="http://faculty.sustech.edu.cn/tangk3/en/">Prof. Ke Tang</a>.</p>
+<p>I received the B.S. degree in automation and the M.S. degree in control theory and control engineering from Northeastern University, Shenyang, China, in 2014 and 2017, respectively,
+and the Ph.D. degree in control science and engineering from Central South University in 2021 under the supervision of Prof. Yong Wang.</p>
+<p>Now I am a Postdoc with the Department of Computer Science, City University of Hong Kong, under the supervision of Prof. Qingfu Zhang.</p>
 <h2>Research Interest</h2>
-<p>The utimate goal of my research is to develop theoretical foundations and practical tools for fully automating the process of algorithm design. Now I am working on:</p>
+<p> Now I am working on:</p>
 <ul>
 <li><p>Automatic Algorithm Design by Evolutionary Computation, i.e., Algorithm Evolution</p>
 </li>
