--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@ Office: G2326, 2/F, Yeung Kin Man Academic Building <br />
 Address: City University of Hong Kong, 83 Tat Chee Avenue, Kowloon Tong, Kowloon, Hong Kong SAR <br />
 Email: pehuang [@] cityu [DOT] edu [DOT] hk</p>
 </td></tr></table>
-<h2>Short Biography</h2>
-<p>I received the B.S. degree in automation and the M.S. degree in control theory and control engineering from Northeastern University, Shenyang, China, in 2014 and 2017, respectively,
-and the Ph.D. degree in control science and engineering from Central South University in 2021 under the supervision of Prof. Yong Wang.</p>
+<h2>Biography</h2>
+<p>I received the B.S. degree in Automation and the M.S. degree in Control Theory and Control Engineering from Northeastern University, Shenyang, 
+ China, in 2014 and 2017, respectively, and the Ph.D. degree in Control Science and Engineering from Central South University in 2021 under the supervision of Prof. Yong Wang.</p>
 <p>Now I am a Postdoc with the Department of Computer Science, City University of Hong Kong, under the supervision of Prof. Qingfu Zhang.</p>
+<p>I am currently a Postdoc with the Department of Computer Science, City University of Hong Kong, under the supervision of Prof. Qingfu Zhang.
+I received my Bachelor degree and Master degree both in College of Information Science and Engineering from Northeastern University, in 2014 and 2017, respectively,
+and the Ph.D. degree in School of Automation from Central South University under the supervision of Prof. Yong Wang.</p>
 <h2>Research Interest</h2>
 <p> Now I am working on:</p>
 <ul>
