--- a/index.html
+++ b/index.html
@@ -25,36 +25,24 @@ Address: City University of Hong Kong, 83 Tat Chee Avenue, Kowloon Tong, Kowloon
 Email: pehuang [@] cityu [DOT] edu [DOT] hk</p>
 </td></tr></table>
 <h2>Biography</h2>
-<p>I received the B.S. degree in Automation and the M.S. degree in Control Theory and Control Engineering from Northeastern University, Shenyang, 
- China, in 2014 and 2017, respectively, and the Ph.D. degree in Control Science and Engineering from Central South University in 2021 under the supervision of Prof. Yong Wang.</p>
-<p>Now I am a Postdoc with the Department of Computer Science, City University of Hong Kong, under the supervision of Prof. Qingfu Zhang.</p>
 <p>I am currently a Postdoc with the Department of Computer Science, City University of Hong Kong, under the supervision of Prof. Qingfu Zhang.
-I received my Bachelor degree and Master degree both in College of Information Science and Engineering from Northeastern University, in 2014 and 2017, respectively,
-and the Ph.D. degree in School of Automation from Central South University under the supervision of Prof. Yong Wang.</p>
+I received my B.S. and M.S. degrees in College of Information Science and Engineering from Northeastern University in 2014 and 2017, respectively,
+and the Ph.D. degree in School of Automation from Central South University in 2021 under the supervision of Prof. Yong Wang.</p>
 <h2>Research Interest</h2>
-<p> Now I am working on:</p>
+<p> My research interests include:</p>
 <ul>
-<li><p>Automatic Algorithm Design by Evolutionary Computation, i.e., Algorithm Evolution</p>
+<li><p>Computational Intelligence</p>
 </li>
-<li><p>Robust and well-generalized Neural Combinatorial Optimizers (Learn to Optimize)</p>
+<li><p>Bilevel Optimization</p>
 </li>
-<li><p>Efficient and effective algorithms for black/grey-box combinatorial optimization problems arising in real-world applications</p>
+<li><p>Resource Management for Wireless Networks</p>
 </li>
 </ul>
-<h2>Recent News</h2>
-<ul>
-<li><p>Aug 2, 2022: One paper accepted by CIKM&rsquo;2022</p>
-</li>
-<li><p>Jul 18, 2022: I (together with Prof. Ke Tang) gave a tutorial &ldquo;Learn to Optimize&rdquo; at WCCI 2022.</p>
-</li>
-<li><p>Apr 15, 2022: One paper accepted by ICSI&rsquo;2022.</p>
-</li>
-</ul>
-<h2>Publications [<a href="https://scholar.google.com/citations?user=tV0nV3oAAAAJ&amp;hl=en">Google Scholar</a>]</h2>
-<p>* indicates that I am the corresponding author</p>
-<h3>Preprints</h3>
+<h2>Publications</h2>
+<p>* indicates that the corresponding author</p>
+<h3>Submitted Papers</h3>
 <ol>
-<li><p><b>Shengcai Liu</b>, Yu Zhang, Ke Tang, and Xin Yao. How Good Is Neural Combinatorial Optimization?. <i>Arxiv preprint arXiv:2209.10913</i>. [<a href="https://arxiv.org/pdf/2209.10913.pdf">preprint PDF</a>]</p>
+<li><p><b>P.-Q. Huang</b>, Q. Zhang*, and Yong Wang*. Bilevel Optimization via Collaboration among Lower-Level Optimization Tasks, IEEE Transactions on Evolutionary Computation, revised and resubmitted.</p> 
 </li>
 <li><p>Zeyu Dai, <b>Shengcai Liu</b>*, Ke Tang, and Qing Li. Saliency Attack: Towards Imperceptible Black-box Adversarial Attack. <i>Arxiv preprint arXiv:2206.01898</i>. [<a href="https://arxiv.org/pdf/2206.01898.pdf">preprint PDF</a>]</p>
 </li>
