--- a/index.html
+++ b/index.html
@@ -42,15 +42,11 @@ and the Ph.D. degree in School of Automation from Central South University in 20
 <p>* indicates that the corresponding author</p>
 <h3>Submitted Papers</h3>
 <ol>
-<li><p><b>P.-Q. Huang</b>, Q. Zhang*, and Yong Wang*. Bilevel Optimization via Collaboration among Lower-Level Optimization Tasks, IEEE Transactions on Evolutionary Computation, revised and resubmitted.</p> 
+<li><p><b>P.-Q. Huang</b>, Q. Zhang*, and Yong Wang*. Bilevel Optimization via Collaboration among Lower-Level Optimization Tasks. <i>IEEE Transactions on Evolutionary Computation</i>, revised and resubmitted.</p> 
 </li>
-<li><p>Zeyu Dai, <b>Shengcai Liu</b>*, Ke Tang, and Qing Li. Saliency Attack: Towards Imperceptible Black-box Adversarial Attack. <i>Arxiv preprint arXiv:2206.01898</i>. [<a href="https://arxiv.org/pdf/2206.01898.pdf">preprint PDF</a>]</p>
+<li><p>Y. Yang, <b>P.-Q. Huang<\b>*, X. Kong, and J. Zhao. A Constrained Multi-Objective Evolutionary Algorithm Assisted by an Additional Objective Function. <i>Applied Soft Computing</i>, revised and resubmitted.</p> 
 </li>
-<li><p>Rui He, <b>Shengcai Liu</b>*, Shan He, and Ke Tang. Multi-Domain Active Learning: A Comparative Study. <i>Arxiv preprint arxiv:2106.13516</i>. [<a href="https://arxiv.org/pdf/2106.13516.pdf">preprint PDF</a>]</p>
-</li>
-<li><p><b>Shengcai Liu</b>, Ning Lu, Wenjing Hong, Chao Qian, and Ke Tang. HydraText: Multi-objective Optimization for Adversarial Textual Attack. <i>ArXiv preprint arXiv:2111.01528</i>. [<a href="https://arxiv.org/pdf/2111.01528.pdf">preprint PDF</a>]</p>
-</li>
-<li><p>Wenjie Chen, <b>Shengcai Liu</b>, and Ke Tang. A new knowledge gradient-based method for constrained bayesian optimization. <i>ArXiv preprint arXiv:2101.08743</i>. [<a href="https://arxiv.org/pdf/2101.08743.pdf">preprint PDF</a>]</p>
+<li><p>B.-C. Wang, J.-J. Guo, <b>P.-Q. Huang<\b>*, and X.-B. Meng. A Two-Stage Adaptive Penalty Method Based on Co-Evolution for Constrained Evolutionary Optimization. <i>submitted to  Complex & Intelligent Systems<\i>.<\p>  
 </li>
 </ol>
 <h3>Journal Papers</h3>
