--- a/index.html
+++ b/index.html
@@ -44,27 +44,18 @@ and the Ph.D. degree in School of Automation from Central South University in 20
 <ol>
 <li><p><b>P.-Q. Huang</b>, Q. Zhang*, and Yong Wang*. Bilevel Optimization via Collaboration among Lower-Level Optimization Tasks. <i>IEEE Transactions on Evolutionary Computation</i>, revised and resubmitted.</p> 
 </li>
-<li><p>Y. Yang, <b>P.-Q. Huang<\b>*, X. Kong, and J. Zhao. A Constrained Multi-Objective Evolutionary Algorithm Assisted by an Additional Objective Function. <i>Applied Soft Computing</i>, revised and resubmitted.</p> 
+<li><p>Y. Yang, <b>P.-Q. Huang</b>*, X. Kong, and J. Zhao. A Constrained Multi-Objective Evolutionary Algorithm Assisted by an Additional Objective Function. <i>Applied Soft Computing</i>, revised and resubmitted.</p> 
 </li>
-<li><p>B.-C. Wang, J.-J. Guo, <b>P.-Q. Huang<\b>*, and X.-B. Meng. A Two-Stage Adaptive Penalty Method Based on Co-Evolution for Constrained Evolutionary Optimization. <i>submitted to  Complex & Intelligent Systems<\i>.<\p>  
+<li><p>B.-C. Wang, J.-J. Guo, <b>P.-Q. Huang</b>*, and X.-B. Meng. A Two-Stage Adaptive Penalty Method Based on Co-Evolution for Constrained Evolutionary Optimization. <i>submitted to  Complex & Intelligent Systems</i>.</p>  
 </li>
 </ol>
 <h3>Journal Papers</h3>
 <ol>
-<li><p>Wenjing Hong, Guiying Li, <b>Shengcai Liu</b>, Peng Yang, and Ke Tang. Multi-objective Evolutionary Optimization for Hardware-aware Neural Network Pruning, Fundamental Research, 2022, DOI: 10.1016/j.fmre.2022.07.013. [<a href="https://www.sciencedirect.com/sdfe/reader/pii/S2667325822003405/pdf">PDF</a>]</p>
+<li><p><b>P.-Q. Huang</b>, Yong Wang*, K. Wang, and Q. Zhang. Combining Lyapunov Optimization with Evolutionary Transfer Optimization for Long-Term Energy Minimization in IRS-Aided Communications. <i> IEEE Transactions on Cybernetics</i>, 2022, DOI: 10.1109/TCYB.2022.3168839. [<a href="https://ieeexplore.ieee.org/abstract/document/9771061">PDF</a>]</p>
 </li>
-<li><p><b>Shengcai Liu</b>, Ning Lu, Cheng Chen, and Ke Tang. Efficient Combinatorial Optimization for Word-level Adversarial Textual Attack. <i>IEEE/ACM Transactions on Audio, Speech and Language Processing</i>, 2022, 30: 98-111. [<a href="https://arxiv.org/pdf/2109.02229.pdf">preprint PDF</a>] [<a href="https://ieeexplore.ieee.org/document/9627642">PDF</a>]</p>
+<li><p><b>P.-Q. Huang</b>, Y. Zhou, K. Wang*, and B.-C. Wang*. Placement Optimization for Multi-IRS-Aided Wireless Communications: An Adaptive Differential Evolution Algorithm. <i>IEEE Wireless Communications Letters</i>, 2022, 11(5): 942-946. May 2022, doi: 10.1109/LWC.2022.3151074. [<a href="https://ieeexplore.ieee.org/abstract/document/9771061">PDF</a>]</p>
 </li>
-<li><p><b>Shengcai Liu</b>, Peng Yang, and Ke Tang. Approximately Optimal Construction of Parallel Algorithm Portfolios by Evolutionary Intelligence (in Chinese). <i>SCIENTIA SINICA Technologica</i>, 2022, 52, DOI: 10.1360/SST-2021-0372. [<a href="http://senshineL.github.io/files/SST.pdf">preprint PDF</a>]</p>
-</li>
-<li><p><b>Shengcai Liu</b>, Ke Tang, and Xin Yao. Memetic Search for Vehicle Routing with Simultaneous Pickup-Delivery and Time Windows. <i>Swarm and Evolutionary Computation</i>, 66: 100927, 2021 [<a href="https://arxiv.org/pdf/2011.06331.pdf">preprint PDF</a>] [<a href="https://www.sciencedirect.com/science/article/abs/pii/S2210650221000882">PDF</a>]</p>
-</li>
-<li><p>Ke Tang, <b>Shengcai Liu</b>, Peng Yang, and Xin Yao. Few-shots Parallel Algorithm Portfolio Construction via Co-evolution. <i>IEEE Transactions on Evolutionary Computation</i>, 2021, 25(3): 595-607. [<a href="https://arxiv.org/pdf/2007.00501.pdf">preprint PDF</a>] [<a href="https://ieeexplore.ieee.org/document/9354852/">PDF</a>]</p>
-</li>
-<li><p><b>Shengcai Liu</b>, Ke Tang, and Xin Yao. Generative Adversarial Construction of Parallel Portfolios. <i>IEEE Transactions on Cybernetics</i>, 2022, 52(2): 784-795. [<a href="http://senshineL.github.io/files/GAST_final.pdf">preprint PDF</a>] [<a href="https://ieeexplore.ieee.org/abstract/document/9082022">PDF</a>]</p>
-</li>
-<li><p>Minshi Chen, Jianxun Chen, Peng Yang, <b>Shengcai Liu</b>, and Ke Tang. A heuristic repair method for dial-a-ride problem in intracity logistic based on neighborhood shrinking. <i>Multimedia Tools and Applications volume</i>, 2021, 80: 30775–30787.[<a href="https://link.springer.com/content/pdf/10.1007/s11042-020-08894-7.pdf">PDF</a>]</p>
-</li>
+
 </ol>
 <h3>Conference Papers</h3>
 <ol>
