--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ and the Ph.D. degree in School of Automation from Central South University in 20
 </li>
 <li><p>Y. Yang, <b>P.-Q. Huang</b>*, X. Kong, and J. Zhao. A Constrained Multi-Objective Evolutionary Algorithm Assisted by an Additional Objective Function. <i>Applied Soft Computing</i>, revised and resubmitted.</p> 
 </li>
-<li><p>B.-C. Wang, J.-J. Guo, <b>P.-Q. Huang</b>*, and X.-B. Meng. A Two-Stage Adaptive Penalty Method Based on Co-Evolution for Constrained Evolutionary Optimization. <i>submitted to  Complex & Intelligent Systems</i>.</p>  
+<li><p>B.-C. Wang, J.-J. Guo, <b>P.-Q. Huang</b>*, and X.-B. Meng. A Two-Stage Adaptive Penalty Method Based on Co-Evolution for Constrained Evolutionary Optimization. <i>submitted to Complex & Intelligent Systems</i>.</p>  
 </li>
 </ol>
 <h3>Journal Papers</h3>
@@ -55,41 +55,57 @@ and the Ph.D. degree in School of Automation from Central South University in 20
 </li>
 <li><p><b>P.-Q. Huang</b>, Y. Zhou, K. Wang*, and B.-C. Wang*. Placement Optimization for Multi-IRS-Aided Wireless Communications: An Adaptive Differential Evolution Algorithm. <i>IEEE Wireless Communications Letters</i>, 2022, 11(5): 942-946. May 2022, doi: 10.1109/LWC.2022.3151074. [<a href="https://ieeexplore.ieee.org/abstract/document/9771061">PDF</a>]</p>
 </li>
-
+<li><p><b>P.-Q. Huang</b>, Y. Wang*, and K. Wang. A Divide-and-Conquer Bilevel Optimization Algorithm for Jointly Pricing Computing Resources and Energy in Wireless Powered MEC. <i>IEEE Transactions on Cybernetics</i>, 2021, DOI: 10.1109/TCYB.2021.3103840. [<a href="https://ieeexplore.ieee.org/document/9560716">PDF</a>]</p>
+</li>
+<li><p>J. Liu, Y. Wang*, <b>P.-Q. Huang</b>*, and S. Jiang. CaR: A Cutting and repulsion-based evolutionary framework for mixed-integer programming problems. <i>IEEE Transactions on Cybernetics</i>, 2021, DOI: 10.1109/TCYB.2021.3103778. [<a href="https://ieeexplore.ieee.org/abstract/document/9537732">PDF</a>]</p>
+</li>  
+</li>
+<li><p>Y. Wang, C.-R. Chen, <b>P.-Q. Huang</b>*, and K. Wang. A New Differential Evolution Algorithm for Joint Mining Decision and Resource Allocation in a MEC-Enabled Wireless Blockchain Network. <i>Computers & Industrial Engineering<i>, 2021, 155: 107186.[<a href="https://www.sciencedirect.com/science/article/pii/S0360835221000905">PDF</a>]</p> 
+</li>    
+</li>
+<li><p>M. Asim, Y. Wang*, K. Wang*, and <b>P.-Q. Huang</b>. A Review on Computational Intelligence Techniques in Cloud and Edge Computing. <i>IEEE Transactions on Emerging Topics in Computational Intelligence</i>, 2020, 4(6): 742-763.[<a href="https://ieeexplore.ieee.org/document/9171883">PDF</a>]</p>
+</li>
+</li>
+<li><p><b>P.-Q. Huang</b> and Y. Wang*. A Framework for Scalable Bilevel Optimization: Identifying and Utilizing the Interactions Between Upper-level and Lower-level Variables. <i>IEEE Transactions on Evolutionary Computation, 2020, 24(6): 1150-1163.[<a href="https://ieeexplore.ieee.org/document/9067069">PDF</a>]</p>
+</li>
+</li>
+<li><p><b>P.-Q. Huang</b>, Y. Wang*, and K. Wang. Energy-Efficient Trajectory Planning for Multi-UAV-Assisted Mobile Edge Computing System. <i>Frontiers of Information Technology & Electronic Engineering</i>, 2020, 24(12): 1713-1725. [<a href="https://link.springer.com/article/10.1631/FITEE.2000315">PDF</a>]</p>
+</li>
+</li>
+<li><p><b>P. -Q. Huang</b>, Y. Wang*, K. Wang*, and Z. -Z. Liu. A Bilevel Optimization Approach for Joint Offloading Decision and Resource Allocation in Cooperative Mobile Edge Computing. <i>IEEE Transactions on Cybernetics</i>, 2020, 50(10): 4228-4241. [<a href="https://ieeexplore.ieee.org/document/8741081">PDF</a>]</p>
+</li>
+</li>
+<li><p>Y. Wang, Z. Ru, K. Wang*, and <b>P.-Q. Huang</b>. Joint Deployment and Task Scheduling Optimization for Large-Scale Mobile Users in Multi-UAV-Enabled Mobile Edge Computing. <i>IEEE Transactions on Cybernetics</i>, 2020, 50(9): 3984-3997. [<a href="https://ieeexplore.ieee.org/document/8833501">PDF</a>]</p>
+</li>
+</li>
+<li><p><b>P.-Q. Huang</b>, Y. Wang*, K. Wang*, and K. Yang. Differential Evolution With a Variable Population Size for Deployment Optimization in a UAV-Assisted IoT Data Collection System. <i>IEEE Transactions on Emerging Topics in Computational Intelligence</i>, 2020, 4(3): 324-335. [<a href="https://ieeexplore.ieee.org/document/8852863">PDF</a>]</p>
+</li>
+</li>
+<li><p>Z.-Z. Liu, Y. Wang*, and <b>P.-Q. Huang</b>. AnD: A Many-Objective Evolutionary Algorithm with Angle-based Selection and Shift-based Density Estimation. <i>Information Sciences</i>, 2020, 509: 400-419. [<a href="https://www.sciencedirect.com/science/article/pii/S0020025518305127">PDF</a>]</p>
+</li>
+</li>
+<li><p>K. Wang, <b>P.-Q. Huang</b>, K. Yang*, C. Pan*, and J. Wang. Unified Offloading Decision Making and Resource Allocation in ME-RAN. <i>IEEE Transactions on Vehicular Technology</i>, 68(8): 8159-8172. [<a href="https://ieeexplore.ieee.org/document/8754787">PDF</a>]</p>
+</li>
 </ol>
 <h3>Conference Papers</h3>
 <ol>
-<li><p>Jiahao Wu, Wenqi Fan, Jingfan Chen, <b>Shengcai Liu</b>, Qing Li, and Ke Tang. Disentangled Contrastive Learning for Social Recommendation. In: <i>Proceedings of the 31st ACM International Conference on Information and Knowledge Management (CIKM&rsquo;2022)</i>. To Appear.</p>
 </li>
-<li><p>Fu Peng, <b>Shengcai Liu</b>*, and Ke Tang. Training Quantized Deep Neural Networks via
-Cooperative Coevolution. In: <i>Proceedings of the 13th International Conference on Swarm Intelligence (ICSI&rsquo;2022)</i>. [<a href="https://arxiv.org/pdf/2112.14834.pdf">preprint PDF</a>]</p>
-</li>
-<li><p>Kangfei Zhao, <b>Shengcai Liu</b>*, Yu Rong, and Jeffrey Xu Yu. Towards Feature-free TSP Solver Selection: A Deep Learning Approach. In: <i>Proceedings of the 20th International Joint Conference on Neural Networks (IJCNN&rsquo;2021)</i>, Virtual, 2021, 1-8. [<a href="https://ieeexplore.ieee.org/abstract/document/9533538">PDF</a>]</p>
-</li>
-<li><p><b>Shengcai Liu</b>, Ke Tang, and Xin Yao. On Performance Estimation in Automatic Algorithm Configuration. In: <i>Proceedings of The 34th AAAI Conference on Artificial Intelligence (AAAI&rsquo;2020)</i>, New York, NY, 2020, 2384-2391. [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/5618">PDF</a>]</p>
-</li>
-<li><p><b>Shengcai Liu</b>, Ke Tang, and Xin Yao. Automatic Construction of Parallel Portfolios via Explicit Instance Grouping. In: <i>Proceedings of The 33rd AAAI Conference on Artificial Intelligence (AAAI&rsquo;2019)</i>, Honululu, HI, 2019, 1560-1567. [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/3970">PDF</a>]</p>
-</li>
-<li><p><b>Shengcai Liu</b>, Yufan Wei, Ke Tang, A.K. Qin, and Xin Yao. Qos-aware Long-Term Based Service Composition in Cloud Computing. In: <i>Proceedings of The 14th IEEE Congress on Evolutionary Computation (CEC&rsquo;2015)</i>, Sendai, Japan, 2015, 3362-3369. [<a href="https://ieeexplore.ieee.org/abstract/document/7257311">PDF</a>]</p>
+<li><p>L. Wang, <b>P.-Q. Huang<b>, K. Wang*, G. Zhang, L.  Zhang, N. Aslam, and K. Yang. RL-Based User Association and Resource Allocation for Multi-UAV enabled MEC. <i>2019 15th International Wireless Communications & Mobile Computing Conference (IWCMC)<i>, Tangier, Morocco, 2019, 741-746. [<a href="https://ieeexplore.ieee.org/document/8766458">PDF</a>]</p>
 </li>
 </ol>
-<h2>Invited Talks</h2>
-<ol>
-<li><p>Learn to Optimize @ The 2022 IEEE World Congress on Computational Intelligence (WCCI&rsquo;2022). Jul 18, 2022. [<a href="http://senshineL.github.io/files/L2O_tutorial.pdf">Slides</a>]</p>
-</li>
-<li><p>Co-Evolved Parallel Algorithm Portfolios @ The 7th Workshop on Evolutionary Computation and Learning (ECOLE&rsquo;2021). May 15, 2021.</p>
-</li>
-<li><p>Algorithm Portfolios for Beginners @ Magic-Data (数据魔术师). April 6, 2021. (online)</p>
-</li>
-</ol>
-<h2>Code &amp; Datasets</h2>
-<p><a href="https://github.com/senshineL/VRPenstein">VRPenstein</a>: A highly-flexible and high-performance meta-heuristic with considerable large configuration space for the vehicle routing problems (VRP).</p>
-<p><a href="https://github.com/senshineL/GA-EAX-restart">GA-EAX-restart</a>: A restart version of the powerful Genetic Algorithm with Edge Assembly Crossover (GA-EAX by Nagata &amp; Kobayashi). In our massive experiments, GA-EAX-restart could consistently outperform GA-EAX and LKH 2.0.9, the two state-of-the-art inexact solvers for TSP.</p>
 <h2>Community Services</h2>
-<p>One of the editors of <a href="http://ecole.asia/news/">All About Evolutionary Optimization (AAEO)</a> (i.e., ECOLE weekly).</p>
-<p>Journal reviewers: IEEE Transactions on Evolutionary Computation, IEEE Transactions on Cybernetics, IEEE Transactions on Emerging Topics in Computational Intelligence, Computational Intelligence Magazine, Frontiers of Computer Science, Information Sciences, Memetic Computing, Natural Computing, Swarm and Evolutionary Optimization.</p>
-<p>PC members: AAAI 2019/2020/2021/2022, IJCAI 2020/2021/2022, ICML 2021, NeurIPS 2021</p>
-<p>Member: IEEE, AAAI </p>
+<p>Journal reviewers: IEEE Transactions on Evolutionary Computation, 
+  IEEE Transactions on Vehicular Technology, 
+  IEEE Communications Letters, 
+  IEEE Wireless Communications Letters, 
+  IEEE Internet of Things Journal, 
+  Swarm and Evolutionary Computation, 
+  Empirical Software Engineering, 
+  Applied Soft Computing, 
+  Wireless Networks, 
+  IEEE Access, 
+  International Journal of Communication Systems</p>
+<p>PC members: IEEE MSN 2021</p>
 </td>
 </tr>
 </table>
