--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ and the Ph.D. degree in School of Automation from Central South University in 20
 <li><p>J. Liu, Y. Wang*, <b>P.-Q. Huang</b>*, and S. Jiang. CaR: A Cutting and repulsion-based evolutionary framework for mixed-integer programming problems. <i>IEEE Transactions on Cybernetics</i>, 2021, DOI: 10.1109/TCYB.2021.3103778. [<a href="https://ieeexplore.ieee.org/abstract/document/9537732">PDF</a>]</p>
 </li>  
 </li>
-<li><p>Y. Wang, C.-R. Chen, <b>P.-Q. Huang</b>*, and K. Wang. A New Differential Evolution Algorithm for Joint Mining Decision and Resource Allocation in a MEC-Enabled Wireless Blockchain Network. <i>Computers & Industrial Engineering<i>, 2021, 155: 107186.[<a href="https://www.sciencedirect.com/science/article/pii/S0360835221000905">PDF</a>]</p> 
+<li><p>Y. Wang, C.-R. Chen, <b>P.-Q. Huang</b>*, and K. Wang. A New Differential Evolution Algorithm for Joint Mining Decision and Resource Allocation in a MEC-Enabled Wireless Blockchain Network. <i>Computers & Industrial Engineering</i>, 2021, 155: 107186.[<a href="https://www.sciencedirect.com/science/article/pii/S0360835221000905">PDF</a>]</p> 
 </li>    
 </li>
 <li><p>M. Asim, Y. Wang*, K. Wang*, and <b>P.-Q. Huang</b>. A Review on Computational Intelligence Techniques in Cloud and Edge Computing. <i>IEEE Transactions on Emerging Topics in Computational Intelligence</i>, 2020, 4(6): 742-763.[<a href="https://ieeexplore.ieee.org/document/9171883">PDF</a>]</p>
