--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ and the Ph.D. degree in School of Automation from Central South University in 20
 <h3>Conference Papers</h3>
 <ol>
 </li>
-<li><p>L. Wang, <b>P.-Q. Huang<b>, K. Wang*, G. Zhang, L.  Zhang, N. Aslam, and K. Yang. RL-Based User Association and Resource Allocation for Multi-UAV enabled MEC. <i>2019 15th International Wireless Communications & Mobile Computing Conference (IWCMC)<i>, Tangier, Morocco, 2019, 741-746. [<a href="https://ieeexplore.ieee.org/document/8766458">PDF</a>]</p>
+<li><p>L. Wang, <b>P.-Q. Huang</b>, K. Wang*, G. Zhang, L.  Zhang, N. Aslam, and K. Yang. RL-Based User Association and Resource Allocation for Multi-UAV enabled MEC. <i>2019 15th International Wireless Communications & Mobile Computing Conference (IWCMC)<i>, Tangier, Morocco, 2019, 741-746. [<a href="https://ieeexplore.ieee.org/document/8766458">PDF</a>]</p>
 </li>
 </ol>
 <h2>Community Services</h2>
