--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ and the Ph.D. degree in School of Automation from Central South University in 20
 <li><p>M. Asim, Y. Wang*, K. Wang*, and <b>P.-Q. Huang</b>. A Review on Computational Intelligence Techniques in Cloud and Edge Computing. <i>IEEE Transactions on Emerging Topics in Computational Intelligence</i>, 2020, 4(6): 742-763.[<a href="https://ieeexplore.ieee.org/document/9171883">PDF</a>]</p>
 </li>
 </li>
-<li><p><b>P.-Q. Huang</b> and Y. Wang*. A Framework for Scalable Bilevel Optimization: Identifying and Utilizing the Interactions Between Upper-level and Lower-level Variables. <i>IEEE Transactions on Evolutionary Computation, 2020, 24(6): 1150-1163.[<a href="https://ieeexplore.ieee.org/document/9067069">PDF</a>]</p>
+<li><p><b>P.-Q. Huang</b> and Y. Wang*. A Framework for Scalable Bilevel Optimization: Identifying and Utilizing the Interactions Between Upper-level and Lower-level Variables. <i>IEEE Transactions on Evolutionary Computation</i>, 2020, 24(6): 1150-1163.[<a href="https://ieeexplore.ieee.org/document/9067069">PDF</a>]</p>
 </li>
 </li>
 <li><p><b>P.-Q. Huang</b>, Y. Wang*, and K. Wang. Energy-Efficient Trajectory Planning for Multi-UAV-Assisted Mobile Edge Computing System. <i>Frontiers of Information Technology & Electronic Engineering</i>, 2020, 24(12): 1713-1725. [<a href="https://link.springer.com/article/10.1631/FITEE.2000315">PDF</a>]</p>
