--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@ and the Ph.D. degree in School of Automation from Central South University in 20
 </li>
 <li><p>Bilevel Optimization</p>
 </li>
+<li><p>Multi-Objective Optimization</p>
+</li>
 <li><p>Resource Management for Wireless Networks</p>
 </li>
 </ul>
@@ -57,7 +59,7 @@ and the Ph.D. degree in School of Automation from Central South University in 20
 </li>
 <li><p><b>P.-Q. Huang</b>, Y. Wang*, and K. Wang. A Divide-and-Conquer Bilevel Optimization Algorithm for Jointly Pricing Computing Resources and Energy in Wireless Powered MEC. <i>IEEE Transactions on Cybernetics</i>, 2021, DOI: 10.1109/TCYB.2021.3103840. [<a href="https://ieeexplore.ieee.org/document/9560716">PDF</a>]</p>
 </li>
-<li><p>J. Liu, Y. Wang*, <b>P.-Q. Huang</b>*, and S. Jiang. CaR: A Cutting and repulsion-based evolutionary framework for mixed-integer programming problems. <i>IEEE Transactions on Cybernetics</i>, 2021, DOI: 10.1109/TCYB.2021.3103778. [<a href="https://ieeexplore.ieee.org/abstract/document/9537732">PDF</a>]</p>
+<li><p>J. Liu, Y. Wang*, <b>P.-Q. Huang</b>*, and S. Jiang. CaR: A Cutting and Repulsion-based Evolutionary Framework for Mixed-integer Programming Problems. <i>IEEE Transactions on Cybernetics</i>, 2021, DOI: 10.1109/TCYB.2021.3103778. [<a href="https://ieeexplore.ieee.org/abstract/document/9537732">PDF</a>]</p>
 </li>  
 </li>
 <li><p>Y. Wang, C.-R. Chen, <b>P.-Q. Huang</b>*, and K. Wang. A New Differential Evolution Algorithm for Joint Mining Decision and Resource Allocation in a MEC-Enabled Wireless Blockchain Network. <i>Computers & Industrial Engineering</i>, 2021, 155: 107186.[<a href="https://www.sciencedirect.com/science/article/pii/S0360835221000905">PDF</a>]</p> 
