--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@ and the Ph.D. degree in School of Automation from Central South University in 20
 </li>
 </ol>
 <h2>Awards</h2>
-<p>2022: Research Talent Hub for ITF projects, ITC HK</p>
-<p>2021: Outstanding Doctoral Dissertation Award, Hunan System Simulation Society</p>
+<ul><li><p>2022: Research Talent Hub for ITF projects, ITC HK</p></li>
+<p>2021: Outstanding Doctoral Dissertation Award, Hunan System Simulation Society</p></li></ul>
 <h2>Community Services</h2>
-<p>Journal reviewers: IEEE Transactions on Evolutionary Computation, 
+<ul><li><p>Journal reviewers: IEEE Transactions on Evolutionary Computation, 
   IEEE Transactions on Vehicular Technology, 
   IEEE Communications Letters, 
   IEEE Wireless Communications Letters, 
@@ -109,8 +109,8 @@ and the Ph.D. degree in School of Automation from Central South University in 20
   Applied Soft Computing, 
   Wireless Networks, 
   IEEE Access, 
-  International Journal of Communication Systems</p>
-<p>PC members: IEEE MSN 2021</p>
+  International Journal of Communication Systems</p></li>
+<li><p>PC members: IEEE MSN 2021</p></li></ul>
 </td>
 </tr>
 </table>
