--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ and the Ph.D. degree in School of Automation from Central South University in 20
 </ol>
 <h2>Awards</h2>
 <ul><li><p>2022: Research Talent Hub for ITF projects, ITC HK</p></li>
-<p>2021: Outstanding Doctoral Dissertation Award, Hunan System Simulation Society</p></li></ul>
+<li><p>2021: Outstanding Doctoral Dissertation Award, Hunan System Simulation Society</p></li></ul>
 <h2>Community Services</h2>
 <ul><li><p>Journal reviewers: IEEE Transactions on Evolutionary Computation, 
   IEEE Transactions on Vehicular Technology, 
