--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </div>
 <table class="imgtable"><tr><td>
 <img src="photos/pqhuang.jpg" alt="alt text" width="90px" height="130px" />&nbsp;</td>
-<td align="left"><p>Postdoc,<br /> <a href="https://cs.cityu.edu.hk/">Department of Computer Science</a>, <br />
+<td align="left"><p>Postdoc,<br /> <a href="https://www.cs.cityu.edu.hk/">Department of Computer Science</a>, <br />
 <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a> <br />
 Office: G2326, 2/F, Yeung Kin Man Academic Building <br />
 Address: City University of Hong Kong, 83 Tat Chee Avenue, Kowloon Tong, Kowloon, Hong Kong SAR <br />
