--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@ Address: City University of Hong Kong, 83 Tat Chee Avenue, Kowloon Tong, Kowloon
 Email: pehuang [@] cityu.edu.hk</p>
 </td></tr></table>
 <h2>Biography</h2>
-<p>I am currently a Postdoc with the Department of Computer Science, City University of Hong Kong, under the supervision of Prof. Qingfu Zhang.
-I received my B.S. and M.S. degrees in College of Information Science and Engineering from Northeastern University in 2014 and 2017, respectively,
-and the Ph.D. degree in School of Automation from Central South University in 2021 under the supervision of Prof. Yong Wang.</p>
+<p>I am currently a Postdoc with the Department of Computer Science, City University of Hong Kong, 
+ under the supervision of Prof. Qingfu Zhang. I received my B.S. and M.S. degrees in the College of
+  Information Science and Engineering from Northeastern University in 2014 and 2017, respectively, 
+  and my Ph.D. degree in the School of Automation from Central South University in 2021 under the supervision of Prof. Yong Wang.</p>
 <h2>Research Interest</h2>
 <p> My research interests include:</p>
 <ul>
