--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Email: pehuang [@] cityu.edu.hk</p>
 </li>
 <li><p>Bilevel Optimization</p>
 </li>
-<li><p>Multi-Objective Optimization</p>
+<li><p>Multi-objective Optimization</p>
 </li>
 <li><p>Resource Management for Wireless Networks</p>
 </li>
