--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ Email: pehuang [@] cityu.edu.hk</p>
 <p>I am currently a Postdoc with the Department of Computer Science, City University of Hong Kong, 
  under the supervision of Prof. Qingfu Zhang. I received my B.S. and M.S. degrees in the College of
   Information Science and Engineering from Northeastern University in 2014 and 2017, respectively, 
-  and my Ph.D. degree in the School of Automation from Central South University in 2021 under the supervision of Prof. Yong Wang.</p>
+  and my Ph.D. degree in the School of Automation from Central South University in 2021 under the 
+  supervision of <a href="https://faculty.csu.edu.cn/wangyong/zh_CN/index.htm">Prof. Yong Wang</a> <br />
 <h2>Research Interest</h2>
 <p> My research interests include:</p>
 <ul>
