--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@ Email: pehuang [@] cityu.edu.hk</p>
 <li><p>2021: Outstanding Doctoral Dissertation Award, Hunan System Simulation Society</p></li></ul>
 <h2>Community Services</h2>
 <ul><li><p>Journal reviewers: IEEE Transactions on Evolutionary Computation, 
+  IEEE Transactions on Cybernetics,
+  IEEE Transactions on Systems, Man, and Cybernetics: Systems,
+  IEEE Transactions on Emerging Topics in Computational Intelligence,
   IEEE Transactions on Vehicular Technology, 
   IEEE Communications Letters, 
   IEEE Wireless Communications Letters, 
