--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@ Email: pehuang [@] cityu.edu.hk</p>
 <!--
 <h3>Submitted Papers</h3>
 <ol>
+<li><p><b>F. Li, Z. Shang, H. Shen, Y. Liu, and P.-Q. Huang. Combining Modified Inverted Generational Distance Indicator with Reference-vector-guided Selection for Many-objective Optimization. <i>Applied Intelligence</i>, 2022, DOI: 10.1007/s10489-022-04115-w. [<a href="https://link.springer.com/article/10.1007/s10489-022-04115-w">PDF</a>]</p>
+</li>
 <li><p><b>P.-Q. Huang</b>, Q. Zhang*, and Yong Wang*. Bilevel Optimization via Collaboration among Lower-Level Optimization Tasks. <i>IEEE Transactions on Evolutionary Computation</i>, revised and resubmitted.</p> 
 </li>
 <li><p>Y. Yang, <b>P.-Q. Huang</b>*, X. Kong, and J. Zhao. A Constrained Multi-Objective Evolutionary Algorithm Assisted by an Additional Objective Function. <i>Applied Soft Computing</i>, revised and resubmitted.</p> 
@@ -57,6 +59,8 @@ Email: pehuang [@] cityu.edu.hk</p>
 -->
 <h3>Journal Papers</h3>
 <ol>
+<li><p><b>F. Li, Z. Shang, H. Shen, Y. Liu, and P.-Q. Huang. Combining Modified Inverted Generational Distance Indicator with Reference-vector-guided Selection for Many-objective Optimization. <i>Applied Intelligence</i>, 2022, DOI: 10.1007/s10489-022-04115-w. [<a href="https://link.springer.com/article/10.1007/s10489-022-04115-w">PDF</a>]</p>
+</li>
 <li><p><b>P.-Q. Huang</b>, Yong Wang*, K. Wang, and Q. Zhang. Combining Lyapunov Optimization with Evolutionary Transfer Optimization for Long-Term Energy Minimization in IRS-Aided Communications. <i> IEEE Transactions on Cybernetics</i>, 2022, DOI: 10.1109/TCYB.2022.3168839. [<a href="https://ieeexplore.ieee.org/abstract/document/9771061">PDF</a>]</p>
 </li>
 <li><p><b>P.-Q. Huang</b>, Y. Zhou, K. Wang*, and B.-C. Wang*. Placement Optimization for Multi-IRS-Aided Wireless Communications: An Adaptive Differential Evolution Algorithm. <i>IEEE Wireless Communications Letters</i>, 2022, 11(5): 942-946. May 2022, doi: 10.1109/LWC.2022.3151074. [<a href="https://ieeexplore.ieee.org/document/9712623">PDF</a>]</p>
