--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Email: pehuang [@] cityu.edu.hk</p>
 </td></tr></table>
 <h2>Biography</h2>
 <p>I am currently a Postdoc with the Department of Computer Science, City University of Hong Kong, 
- under the supervision of Prof. Qingfu Zhang. I received my B.S. and M.S. degrees in the College of
+ under the supervision of <a href="https://scholars.cityu.edu.hk/en/persons/qingfu-zhang(a25373cf-62a1-4697-ad08-43678bcbf3f2).html">Prof. Qingfu Zhang</a>. I received my B.S. and M.S. degrees in the College of
   Information Science and Engineering from Northeastern University in 2014 and 2017, respectively, 
   and my Ph.D. degree in the School of Automation from Central South University in 2021 under the 
   supervision of <a href="https://faculty.csu.edu.cn/wangyong/zh_CN/index.htm">Prof. Yong Wang</a>. <br />
