--- a/index.html
+++ b/index.html
@@ -60,17 +60,21 @@ Email: pehuang [@] cityu.edu.hk</p>
 <ol>
 <li><p>F. Li, Z. Shang, H. Shen, Y. Liu, and <b>P.-Q. Huang</b>. Combining Modified Inverted Generational Distance Indicator with Reference-vector-guided Selection for Many-objective Optimization. <i>Applied Intelligence</i>, 2022, DOI: 10.1007/s10489-022-04115-w. [<a href="https://link.springer.com/article/10.1007/s10489-022-04115-w">PDF</a>]</p>
 </li>
+</li>
 <li><p><b>P.-Q. Huang</b>, Yong Wang*, K. Wang, and Q. Zhang. Combining Lyapunov Optimization with Evolutionary Transfer Optimization for Long-Term Energy Minimization in IRS-Aided Communications. <i> IEEE Transactions on Cybernetics</i>, 2022, DOI: 10.1109/TCYB.2022.3168839. [<a href="https://ieeexplore.ieee.org/abstract/document/9771061">PDF</a>]</p>
 </li>
-<li><p><b>P.-Q. Huang</b>, Y. Zhou, K. Wang*, and B.-C. Wang*. Placement Optimization for Multi-IRS-Aided Wireless Communications: An Adaptive Differential Evolution Algorithm. <i>IEEE Wireless Communications Letters</i>, 2022, 11(5): 942-946. May 2022, doi: 10.1109/LWC.2022.3151074. [<a href="https://ieeexplore.ieee.org/document/9712623">PDF</a>]</p>
-</li>
-<li><p><b>P.-Q. Huang</b>, Y. Wang*, and K. Wang. A Divide-and-Conquer Bilevel Optimization Algorithm for Jointly Pricing Computing Resources and Energy in Wireless Powered MEC. <i>IEEE Transactions on Cybernetics</i>, 2021, DOI: 10.1109/TCYB.2021.3103840. [<a href="https://ieeexplore.ieee.org/document/9560716">PDF</a>]</p>
 </li>
 <li><p>J. Liu, Y. Wang*, <b>P.-Q. Huang</b>*, and S. Jiang. CaR: A Cutting and Repulsion-based Evolutionary Framework for Mixed-integer Programming Problems. <i>IEEE Transactions on Cybernetics</i>, 2021, DOI: 10.1109/TCYB.2021.3103778. [<a href="https://ieeexplore.ieee.org/abstract/document/9537732">PDF</a>]</p>
 </li>  
 </li>
+<li><p><b>P.-Q. Huang</b>, Y. Wang*, and K. Wang. A Divide-and-Conquer Bilevel Optimization Algorithm for Jointly Pricing Computing Resources and Energy in Wireless Powered MEC. <i>IEEE Transactions on Cybernetics</i>, 2022, 52(11): 12099-12111. [<a href="https://ieeexplore.ieee.org/document/9560716">PDF</a>]</p>
+</li>
+</li>
+<li><p><b>P.-Q. Huang</b>, Y. Zhou, K. Wang*, and B.-C. Wang*. Placement Optimization for Multi-IRS-Aided Wireless Communications: An Adaptive Differential Evolution Algorithm. <i>IEEE Wireless Communications Letters</i>, 2022, 11(5): 942-946. May 2022, doi: 10.1109/LWC.2022.3151074. [<a href="https://ieeexplore.ieee.org/document/9712623">PDF</a>]</p>
+</li>
+</li>  
 <li><p>Y. Wang, C.-R. Chen, <b>P.-Q. Huang</b>*, and K. Wang. A New Differential Evolution Algorithm for Joint Mining Decision and Resource Allocation in a MEC-Enabled Wireless Blockchain Network. <i>Computers & Industrial Engineering</i>, 2021, 155: 107186.[<a href="https://www.sciencedirect.com/science/article/pii/S0360835221000905">PDF</a>]</p> 
-</li>    
+</li> 
 </li>
 <li><p>M. Asim, Y. Wang*, K. Wang*, and <b>P.-Q. Huang</b>. A Review on Computational Intelligence Techniques in Cloud and Edge Computing. <i>IEEE Transactions on Emerging Topics in Computational Intelligence</i>, 2020, 4(6): 742-763.[<a href="https://ieeexplore.ieee.org/document/9171883">PDF</a>]</p>
 </li>
