--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Email: pehuang [@] cityu.edu.hk</p>
 <li><p><b>P.-Q. Huang</b>, Y. Wang*, and K. Wang. A Divide-and-Conquer Bilevel Optimization Algorithm for Jointly Pricing Computing Resources and Energy in Wireless Powered MEC. <i>IEEE Transactions on Cybernetics</i>, 2022, 52(11): 12099-12111. [<a href="https://ieeexplore.ieee.org/document/9560716">PDF</a>]</p>
 </li>
 </li>
-<li><p><b>P.-Q. Huang</b>, Y. Zhou, K. Wang*, and B.-C. Wang*. Placement Optimization for Multi-IRS-Aided Wireless Communications: An Adaptive Differential Evolution Algorithm. <i>IEEE Wireless Communications Letters</i>, 2022, 11(5): 942-946. May 2022, doi: 10.1109/LWC.2022.3151074. [<a href="https://ieeexplore.ieee.org/document/9712623">PDF</a>]</p>
+<li><p><b>P.-Q. Huang</b>, Y. Zhou, K. Wang*, and B.-C. Wang*. Placement Optimization for Multi-IRS-Aided Wireless Communications: An Adaptive Differential Evolution Algorithm. <i>IEEE Wireless Communications Letters</i>, 2022, 11(5): 942-946. [<a href="https://ieeexplore.ieee.org/document/9712623">PDF</a>]</p>
 </li>
 </li>  
 <li><p>Y. Wang, C.-R. Chen, <b>P.-Q. Huang</b>*, and K. Wang. A New Differential Evolution Algorithm for Joint Mining Decision and Resource Allocation in a MEC-Enabled Wireless Blockchain Network. <i>Computers & Industrial Engineering</i>, 2021, 155: 107186.[<a href="https://www.sciencedirect.com/science/article/pii/S0360835221000905">PDF</a>]</p> 
