--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <a href="https://www.cityu.edu.hk/">City University of Hong Kong</a> <br />
 Office: G2326, 2/F, Yeung Kin Man Academic Building <br />
 Address: City University of Hong Kong, 83 Tat Chee Avenue, Kowloon Tong, Kowloon, Hong Kong SAR <br />
-Email: pehuang [@] cityu.edu.hk</p>
+Email: pehuang@cityu.edu.hk</p>
 </td></tr></table>
 <h2>Biography</h2>
 <p>I am currently a Postdoc with the Department of Computer Science, City University of Hong Kong, 
