--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Email: pehuang@cityu.edu.hk</p>
 <li><p><b>P.-Q. Huang</b>, Yong Wang*, K. Wang, and Q. Zhang. Combining Lyapunov Optimization with Evolutionary Transfer Optimization for Long-Term Energy Minimization in IRS-Aided Communications. <i> IEEE Transactions on Cybernetics</i>, 2022, DOI: 10.1109/TCYB.2022.3168839. [<a href="https://ieeexplore.ieee.org/abstract/document/9771061">PDF</a>]</p>
 </li>
 </li>
-<li><p>J. Liu, Y. Wang*, <b>P.-Q. Huang</b>*, and S. Jiang. CaR: A Cutting and Repulsion-based Evolutionary Framework for Mixed-integer Programming Problems. <i>IEEE Transactions on Cybernetics</i>, 2021, DOI: 10.1109/TCYB.2021.3103778. [<a href="https://ieeexplore.ieee.org/abstract/document/9537732">PDF</a>]</p>
+<li><p>J. Liu, Y. Wang*, <b>P.-Q. Huang</b>*, and S. Jiang. CaR: A Cutting and Repulsion-based Evolutionary Framework for Mixed-integer Programming Problems. <i>IEEE Transactions on Cybernetics</i>, 2022, 52(12): 13129-13141.  [<a href="https://ieeexplore.ieee.org/abstract/document/9537732">PDF</a>]</p>
 </li>  
 </li>
 <li><p><b>P.-Q. Huang</b>, Y. Wang*, and K. Wang. A Divide-and-Conquer Bilevel Optimization Algorithm for Jointly Pricing Computing Resources and Energy in Wireless Powered MEC. <i>IEEE Transactions on Cybernetics</i>, 2022, 52(11): 12099-12111. [<a href="https://ieeexplore.ieee.org/document/9560716">PDF</a>]</p>
