--- a/index.html
+++ b/index.html
@@ -58,9 +58,13 @@ Email: pehuang@cityu.edu.hk</p>
 -->
 <h3>Journal Papers</h3>
 <ol>
+<li>
+<p>Y. Yang, <b>P.-Q. Huang</b>*, X. Kong, and J. Zhao. A Constrained Multi-Objective Evolutionary Algorithm Assisted by an Additional Objective Function. <i>Applied Soft Computing</i>, in press.</p> 
+</li>
+</li>
 <li><p>F. Li, Z. Shang, H. Shen, Y. Liu, and <b>P.-Q. Huang</b>. Combining Modified Inverted Generational Distance Indicator with Reference-vector-guided Selection for Many-objective Optimization. <i>Applied Intelligence</i>, 2022, DOI: 10.1007/s10489-022-04115-w. [<a href="https://link.springer.com/article/10.1007/s10489-022-04115-w">PDF</a>]</p>
 </li>
-</li>
+</li>ified Inverted Generational Distance Indicator with Reference-vector-guided Selection for Many-objective Optimization. <i>Applied Intelligence</i>, 2022, DOI: 10.1007/s10489-022-04115-w. [<a href="https://link.springer.com/article/10.1007/s10489-022-04115-w">PDF</a>]</p>
 <li><p><b>P.-Q. Huang</b>, Yong Wang*, K. Wang, and Q. Zhang. Combining Lyapunov Optimization with Evolutionary Transfer Optimization for Long-Term Energy Minimization in IRS-Aided Communications. <i> IEEE Transactions on Cybernetics</i>, 2022, DOI: 10.1109/TCYB.2022.3168839. [<a href="https://ieeexplore.ieee.org/abstract/document/9771061">PDF</a>]</p>
 </li>
 </li>
