--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@ Email: pehuang@cityu.edu.hk</p>
 <ul><li><p>2022: Research Talent Hub for ITF projects, ITC HK</p></li>
 <li><p>2021: Outstanding Doctoral Dissertation Award, Hunan System Simulation Society</p></li></ul>
 <h2>Community Services</h2>
-<ul><li><p>Journal reviewers: IEEE Transactions on Evolutionary Computation, 
+<ul>
+  <li><p>Editorship: Junior Editorial Board Member, Journal of Smart Environments and Green Computing</p></li>
+  <li><p>Journal reviewers: IEEE Transactions on Evolutionary Computation, 
   IEEE Transactions on Cybernetics,
   IEEE Transactions on Systems, Man, and Cybernetics: Systems,
   IEEE Transactions on Emerging Topics in Computational Intelligence,
