--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Email: pehuang@cityu.edu.hk</p>
 <h3>Journal Papers</h3>
 <ol>
 <li>
-<p>Y. Yang, <b>P.-Q. Huang</b>*, X. Kong, and J. Zhao. A Constrained Multi-Objective Evolutionary Algorithm Assisted by an Additional Objective Function. <i>Applied Soft Computing</i>, 2022, DOI: 10.1016/j.asoc.2022.109904. </p> 
+<p>Y. Yang, <b>P.-Q. Huang</b>*, X. Kong, and J. Zhao. A Constrained Multi-Objective Evolutionary Algorithm Assisted by an Additional Objective Function. <i>Applied Soft Computing</i>, 2023, 132: 109904.  [<a href="https://ieeexplore.ieee.org/abstract/document/9537732">PDF</a>]</p>
 </li>
 </li>
 <li><p>F. Li, Z. Shang, H. Shen, Y. Liu, and <b>P.-Q. Huang</b>. Combining Modified Inverted Generational Distance Indicator with Reference-vector-guided Selection for Many-objective Optimization. <i>Applied Intelligence</i>, 2022, DOI: 10.1007/s10489-022-04115-w. [<a href="https://link.springer.com/article/10.1007/s10489-022-04115-w">PDF</a>]</p>
