--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ Email: pehuang@cityu.edu.hk</p>
 <h3>Journal Papers</h3>
 <ol>
 </li>
-<li><p><b>P.-Q. Huang</b>, Q. Zhang*, and Yong Wang*. Bilevel Optimization via Collaboration among Lower-Level Optimization Tasks. <i>IEEE Transactions on Evolutionary Computation</i>, Accepted.</p> 
+<li><p><b>P.-Q. Huang</b>, Q. Zhang*, and Yong Wang*. Bilevel Optimization via Collaborations among Lower-Level Optimization Tasks. <i>IEEE Transactions on Evolutionary Computation</i>, Accepted.</p> 
 </li>
 <li>
 <p>Y. Yang, <b>P.-Q. Huang</b>*, X. Kong, and J. Zhao. A Constrained Multi-Objective Evolutionary Algorithm Assisted by an Additional Objective Function. <i>Applied Soft Computing</i>, 2023, 132: 109904.  [<a href="https://www.sciencedirect.com/science/article/pii/S156849462200953X">PDF</a>]</p>
