--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ Email: pehuang@cityu.edu.hk</p>
 </li>
 </ul>
 <h2>Publications</h2>
-<p>* indicates that the corresponding author</p>
+<p>* indicates the corresponding author</p>
 <!--
 <h3>Submitted Papers</h3>
 <ol>
