--- a/index.html
+++ b/index.html
@@ -48,10 +48,6 @@ Email: pehuang@cityu.edu.hk</p>
 <h3>Submitted Papers</h3>
 <ol>
 </li>
-<li><p><b>P.-Q. Huang</b>, Q. Zhang*, and Yong Wang*. Bilevel Optimization via Collaboration among Lower-Level Optimization Tasks. <i>IEEE Transactions on Evolutionary Computation</i>, revised and resubmitted.</p> 
-</li>
-<li><p>Y. Yang, <b>P.-Q. Huang</b>*, X. Kong, and J. Zhao. A Constrained Multi-Objective Evolutionary Algorithm Assisted by an Additional Objective Function. <i>Applied Soft Computing</i>, revised and resubmitted.</p> 
-</li>
 <li><p>B.-C. Wang, J.-J. Guo, <b>P.-Q. Huang</b>*, and X.-B. Meng. A Two-Stage Adaptive Penalty Method Based on Co-Evolution for Constrained Evolutionary Optimization. <i>submitted to Complex & Intelligent Systems</i>.</p>  
 </li>
 </ol>
@@ -59,7 +55,7 @@ Email: pehuang@cityu.edu.hk</p>
 <h3>Journal Papers</h3>
 <ol>
 </li>
-<li><p><b>P.-Q. Huang</b>, Q. Zhang*, and Yong Wang*. Bilevel Optimization via Collaborations among Lower-Level Optimization Tasks. <i>IEEE Transactions on Evolutionary Computation</i>, Accepted.</p> 
+<li><p><b>P.-Q. Huang</b>, Q. Zhang*, and Yong Wang*. Bilevel Optimization via Collaborations among Lower-Level Optimization Tasks. <i>IEEE Transactions on Evolutionary Computation</i>, 2023, DOI: 10.1109/TEVC.2022.3233409. [<a href="https://ieeexplore.ieee.org/document/10004713">PDF</a>]</p>
 </li>
 <li>
 <p>Y. Yang, <b>P.-Q. Huang</b>*, X. Kong, and J. Zhao. A Constrained Multi-Objective Evolutionary Algorithm Assisted by an Additional Objective Function. <i>Applied Soft Computing</i>, 2023, 132: 109904.  [<a href="https://www.sciencedirect.com/science/article/pii/S156849462200953X">PDF</a>]</p>
