--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@ Email: pehuang@cityu.edu.hk</p>
   Swarm and Evolutionary Computation, 
   Empirical Software Engineering, 
   Applied Soft Computing, 
+  Engineering Applications of Artificial Intelligence,
   Wireless Networks, 
   IEEE Access, 
   International Journal of Communication Systems</p></li>
